fix(_hero.scss): overflow-x

--- a/styles/blocks/_hero.scss
+++ b/styles/blocks/_hero.scss
@@ -61,8 +61,10 @@
     }
 
     @include tablet {
-      &::before {
+      &::before,
+      &::after {
         width: 100vw;
+        // width: calc(var--container-padding-x);
         right: calc(var(--container-padding-x) * -1);
       }
     }
@@ -84,7 +86,6 @@
     }
 
     @include tablet {
-      width: 100vw;
       margin-left: calc(var(--container-padding-x) * -1);
       padding-right: rem(40);
       padding-top: fluid-laptop-mobile(200, 100);
